opam-version: "2.0"
maintainer: ["Thomas Gazagnaire <thomas@gazagnaire.org>" ]
authors: ["David Sheets" "Thomas Gazagnaire"]
homepage: "https://github.com/dsheets/ocaml-cf"
bug-reports: "https://github.com/dsheets/ocaml-cf/issues"
dev-repo: "git+https://github.com/dsheets/ocaml-cf.git"
doc: "https://dsheets.github.io/ocaml-cf/"
license: "ISC"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "dune"
  "alcotest" {with-test}
  "cf" {>= "0.2"}
  "lwt" {>= "3.2.0"}
]

available: [os = "macos"]

synopsis: """
Lwt bindings to macOS CoreFoundation
"""
description: """
These bindings use [ctypes](https://github.com/ocamllabs/ocaml-ctypes)
for type-safe stub generation.
"""
