opam-version: "2.0"
maintainer: ["Thomas Gazagnaire <thomas@gazagnaire.org>" ]
authors: ["David Sheets" "Thomas Gazagnaire"]
homepage: "https://github.com/mirage/ocaml-cf"
bug-reports: "https://github.com/mirage/ocaml-cf/issues"
dev-repo: "git+https://github.com/mirage/ocaml-cf.git"
doc: "https://mirage.github.io/ocaml-cf/"
license: "ISC"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune"
  "base-bytes"
  "ctypes" {>= "0.4.0"}
  "ctypes-foreign"
]

available: [os = "macos"]

synopsis: """
OCaml bindings to macOS CoreFoundation
"""
description: """
These bindings use [ctypes](https://github.com/ocamllabs/ocaml-ctypes)
for type-safe stub generation.
"""
